--- a/character_editor.css
+++ b/character_editor.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: orbitron;
+    src: url(Orbitron.ttf);
+}
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: orbitron;
 }
 p {
     padding: 0px;
@@ -8,7 +13,20 @@ p {
 
 @font-face {
     font-family: swfont;
-    src: url(SWFont2.ttf);
+    src: url(SWFont.ttf);
+}
+
+body {
+    background: #e5e7ef;
+}
+
+div {
+    border-color: #9b96ca;
+    border-width: 2px;
+    border-radius: 10px;
+    border-style: solid;
+    padding: 4px;
+    margin: 4px;
 }
 
 p1 {
@@ -27,21 +45,89 @@ p2 {
     margin-bottom: 5px;
 }
 
+label {
+    line-height: 25px;
+}
+
 button {
+    background-color: #c2bee0;
+    stop-color: #9b96ca;
     font-family: swfont;
-    height: 40px;
-    margin-top: 5px;
-    margin-left: 5px;
+    height: 50px;
+    margin: 0px;
+    margin-right: 5px;
     vertical-align: middle;
     float: left;
     border: 2px;
+    border-top: 0px;
+    border-bottom: 0px;
 }
 
 img {
     max-width: 100%;
 }
 
+input {
+    border: 0px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+select {
+    border: 0px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+
+input:focus-visible {
+    outline: 2px solid #9b96ca;
+    border-radius: 3px;
+  }
+
+
 .header {
     height: 50px;
-    background-color: darkgrey;
+    background-color: #c0bfdf;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+}
+
+.main {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-top: 0px;
+    margin-top: 0px;
+}
+
+#pdfdiv {
+    padding: 0px;
+    background-color: #fff;
+}
+.page {
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    
+}
+.skill {
+    position: absolute;
+    left: 24%;
+}
+
+.skillb {
+    position: absolute;
+    left: 26%;
+}
+
+.guidebox {
+    border-radius: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
