--- a/character_editor.css
+++ b/character_editor.css
@@ -108,11 +108,9 @@ input:focus-visible {
     outline: 2px solid #9b96ca;
     border-radius: 3px;
   }
-iframe {
-    padding: 0px;
-    border: 0px;
-    margin: 8px;
-    border-radius: 8px;
+td {
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 .header {
@@ -183,4 +181,11 @@ iframe {
     margin: 0px;
     padding: 0px;
     font-size: 8px;
+}
+
+.abilities-input {
+    width: 50px;
+    margin: 8px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
