--- a/character_editor.css
+++ b/character_editor.css
@@ -7,8 +7,13 @@
         font-family: orbitron;
     }
     .header {
-        visibility: hidden;
+        visibility: hidden !important;
     }
+
+    .noprint {
+        visibility: hidden !important;
+    }
+
     div {
         border: 0px !important;
         border-radius: 0px !important;
