--- a/character_editor.css
+++ b/character_editor.css
@@ -194,3 +194,8 @@ td {
     margin-top: 2px;
     margin-bottom: 2px;
 }
+.talentsform {
+    margin: 4px;
+    border: 2px;
+    border-color: #9b96ca;
+}
